# chaos-sdk

./: .gitignore  README.en.md  README.md  README.pt-BR.md  pyproject.toml  setup.py
blueprints/: BLOCKS_REFERENCE.md  INDEPENDENCE.md  MULTI_COMMAND_GUIDE.md  README.en.md  README.pt-BR.md  actions_meta.json  api.py  base_stub.py  compiler.py  standalone_server.py
blueprints/examples/: hello.json  hello_out.py  hello_out_standalone.py
blueprints/user/: Teste.json
chaos_sdk/: __init__.py  cli.py  config.py  decorators.py  server_bridge.py  utils.py  validator.py
chaos_sdk/actions/: keyboard.py  mouse.py
chaos_sdk/blueprints/: README.md  SECURITY.md  __init__.py  api.py  base_stub.py  compiler.py  compiler_v2.py  compiler_v3.py  node_templates.json
chaos_sdk/core/: __init__.py  command.py  events.py  plugin.py  plugin_loader.py
chaos_sdk/models/: __init__.py  context.py  user.py
chaos_sdk/mods/: __init__.py  bridge.py  decorators.py  protocol.py  registry.py
chaos_sdk/mods/game_sdks/: README.md
chaos_sdk/plugins/: base_plugin.py  context.py  permissions.py  plugin_loader.py  plugin_state.json  sandbox.py
chaos_sdk/testing/: __init__.py  dev_cli.py  dev_server.py  mocks.py  runner.py  test_runner.py
docs/: LOCAL_DEVELOPMENT.md  MOD_INTEGRATION.md
examples/: casino_plugin.py  dev_plugin_example.py  hello_plugin.py  minecraft_chaos_plugin.py  server_compatible_plugin.py
examples/hello_world/: manifest.json  plugin.py
tests/: test_compiler_security.py  test_example_plugin.py
web/: blueprints_visual.html
(+5 files in other folders)
